# EmbodiedSplat

./: .gitignore  README.md  main.py  pyproject.toml
configs/: env.yaml  nerfstudio.yaml
nerfacto/2026-02-23_193435/: config.yml
scripts/: render_from_state.py  render_one.py
scripts/debug/: render_depth_stats.py
scripts/demo/: run_env_demo.py
scripts/ns/: process_video.sh  train_splatfacto.sh
scripts/rl/: train_ppo.py  train_ppo_vec.py
src/embodied_splat_sim/: types.py
src/embodied_splat_sim/envs/: __init__.py  splat_nav_env.py
src/embodied_splat_sim/renderer/: __init__.py  nerfstudio_loader.py  nerfstudio_renderer.py  ns_config.py  splat_renderer.py
src/embodied_splat_sim/sim/: __init__.py  dynamics.py  state.py
src/embodied_splat_sim/utils/: se3.py
tests/: test_env_api.py
